<resources>
    <string name="app_name">ExpenseTracker</string>
    <string name="dialogTitle">Alert!</string>
    <string name="dialogMessage">This is a test for Alert dialog.</string>
    <string name="dashboard_message">Dashboard displays expenses based on category. Work In Progress!</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="expense_logs">Expense Logs</string>
    <string name="help_center">Help Center</string>
    <string name="entry1">1. Ralphs - Groceries -- $12.75</string>
    <string name="entry2">2. Walmart - Groceries -- $12.75</string>
    <string name="entry3">3. Target - Groceries -- $12.75</string>
    <string name="entry4">4. Albertsons - Groceries -- $12.75</string>
    <string name="entry5">5. Costco - Groceries -- $12.75</string>
    <string name="entry6">6. Aldi - Groceries -- $12.75</string>
    <string name="entry7">7. Sprouts - Groceries -- $12.75</string>
    <string name="entry8">8. Trader Joe - Groceries -- $12.75</string>
    <string name="entry9">9. Vine Ripe Market - Groceries -- $12.75</string>
    <string name="entry10">10. Miramar Cash and Carry - Groceries -- $12.75</string>
    <string name="entry11">11. Batman - Movies -- $12.75</string>
    <string name="entry12">12. Top Gun - Movies -- $12.75</string>
    <string name="entry13">13. Dune - Movies -- $12.75</string>
    <string name="entry14">14. Sonic - Movies -- $12.75</string>
    <string name="entry15">15. Spiderman - Movies -- $12.75</string>
    <string name="entry16">16. Ice Age - Movies -- $12.75</string>
    <string name="entry17">17. Shrek - Movies -- $12.75</string>
    <string name="entry18">18. Minions - Movies -- $12.75</string>
    <string name="entry19">19. Dark Rain - Movies -- $12.75</string>
    <string name="entry20">20. Sin City - Movies -- $12.75</string>
    <string name="entry21">21. Bed Bath and Beyond - Shopping -- $12.75</string>
    <string name="entry22">22. JCPenney - Shopping -- $12.75</string>
    <string name="entry23">23. TJ Maxx - Shopping -- $12.75</string>
    <string name="entry24">24. Macys - Shopping -- $12.75</string>
    <string name="entry25">25. Nordstrom - Shopping -- $12.75</string>
    <string name="entry26">26. Bloomingdale - Shopping -- $12.75</string>
    <string name="entry27">27. Forever21 - Shopping -- $12.75</string>
    <string name="entry28">28. Old Navy - Shopping -- $12.75</string>
    <string name="entry29">29. Ann Taylor - Shopping -- $12.75</string>
    <string name="entry30">30. Ross - Shopping -- $12.75</string>
</resources>